deployment/vault/base/vault.ns.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: vault
  labels:
    istio-injection: enabled
